Wed Mar 15 16:30:09 2006  Søren Sandmann  <sandmann@redhat.com>

	* src/compositor.c (set_geometry): Use set_target_rect() instead
	of set_size(). 

	* src/c-screen.c: Add set_target_rect() as a way of scaling windows.

	* src/window.c (meta_window_handle_mouse_grab_op_event): Turn
	updates on after a button release.

	* src/window.c (meta_window_move_resize_internal): Fix
	indentation. 

Wed Mar 15 11:34:54 2006  Søren Sandmann  <sandmann@redhat.com>

	* src/c-screen.c (meta_screen_info_add_window): Use unset_patch()
	instead of unset_geometry().

Tue Mar 14 11:57:46 2006  Søren Sandmann  <sandmann@redhat.com>

	* src/compositor.c: Comment out wobbling
	
	* src/compositor.c (blow_up): remove this function
	
	* src/compositor.c (process_configure_notify): Uncomment
	set_size(). 

	* src/c-screen.c (meta_screen_info_set_updates): When updates are
	true, set all the properties such as size and shape.

	* src/c-screen.c (meta_screen_info_add_window): Create a special
	WindowInfo structure for each window.

	* src/c-screen.c (meta_screen_info_set_size): Set size and output
	shape of the drawable node.

2006-03-13  Elijah Newren  <newren gmail com>

        * README:
	* configure.in:
	Update to reflect that we're now targetting 2.15 development.

2006-03-12  Thomas Thurman  <thomas@thurman.org.uk>

	* src/window-props.c (set_title_text): Mark a particular
	string for translation.  #334332.

2006-03-06  Ryan Lortie  <desrt@desrt.ca>

	* src/window.c (meta_window_free): Only unmaximise window before
	freeing if the window is actually maximised.  #333563.

Fri Mar  3 15:31:04 2006  Søren Sandmann  <sandmann@redhat.com>

	* src/c-screen.c (meta_screen_info_new): Update for libcm API
	change.

Wed Mar  3 13:25:03 2006  Søren Sandmann  <sandmann@redhat.com>

	* src/compositor.c, src/c-screen.[ch]: Split the ScreenInfo data
	structure into separate, new files c-screen.[ch].
	
	* src/errors.c (x_error_handler): Forward foreign errors to
	foreign displays.
